# stock-recommendations

./: .gitignore  FMP_API_정리.md  GITHUB_PAGES_간단가이드.md  GitHub_Pages_활성화.md  HOSTING_GUIDE.md  LICENSE.txt  Netlify_5분_완성.txt  Netlify_설정_가이드.md  README.md  StockNews_적용방안_요약.md  auto_demo.py  backtest_improved.py  backtest_news_quick.py  backtest_quick.py  backtest_strategy.py  backtest_with_news.py  check_ticker.py  config.example.py  daily_stock_report_20260131.html  daily_stock_report_20260202.html  daily_stock_report_20260203.html  daily_stock_report_20260204.html  daily_update_with_telegram.py  demo_auto.py  demo_full_features.py  demo_korea_quant.py  demo_news_sentiment.py  demo_price_recommendation.py  demo_quant_interactive.py  demo_quant_simple.py  demo_quant_v3.py  example_quant_trading.py  generate_daily_report.py  generate_daily_report_v2.py  generate_value_report.py  generate_value_temp.py  github_업로드.bat  index.html  market_monitor.py  nasdaq100_report.html  (+27 more)
.github/workflows/: daily-update.yml  telegram-alerts.yml
quant_trading/: README.md  __init__.py  automation_analyzer.py  indicators.py  news_sentiment_analyzer.py  policy_analyzer.py  price_recommender.py  stock_recommender.py  technical_analyzer.py  technical_analyzer_v2.py  technical_analyzer_v3.py  theme_analyzer.py  valuation_analyzer.py
src/FinanceDataReader/: __init__.py  data.py  snap.py
src/FinanceDataReader/crypto/: __init__.py  data.py
src/FinanceDataReader/fred/: __init__.py  data.py
src/FinanceDataReader/krx/: __init__.py  data.py  listing.py
src/FinanceDataReader/naver/: __init__.py  data.py  listing.py
src/FinanceDataReader/utils/: __init__.py  date_utils.py  http.py
src/FinanceDataReader/yahoo/: __init__.py  data.py
tests/: test_datareader.py
